...
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      Row(
                        children: [
                          const Expanded(
                            child: Text(
                              'Points of interest filter',
                              style: TextStyle(
                                fontSize: 20,
                                fontWeight: FontWeight.w700,
                              ),
                            ),
                          ),
...
                        scale: 0.8,
                        alignment: Alignment.bottomLeft,
                        child: DropdownMenu(
                          enableFilter: true,
                          requestFocusOnTap: true,
                          leadingIcon: const Icon(Icons.search),
                          label: const Text('Select...'),
                          inputDecorationTheme: const InputDecorationTheme(
                            filled: true,
                            contentPadding: EdgeInsets.symmetric(vertical: 5.0),
                          ),
                          onSelected: onSortByChanged,
                          dropdownMenuEntries: const [
                            DropdownMenuEntry(
                              value: 'POPULARITY',
                              label: 'Popularity',
                            ),
                            DropdownMenuEntry(
                              value: 'DISTANCE',
                              label: 'Distance',
                            ),
                          ],
...
                            ),
                          ),
                          const SizedBox(width: 12),
                          Expanded(
                            child: FilledButton(
                              onPressed: onApply,
                              child: const Text('Apply'),
                            ),
                          ),
                        ],
                      ),
                      Center(
                        child: OutlinedButton(
                          onPressed: onShow,
                          child: const Text('Show results'),
                        ),
                      ),
                    ],
                  ),
                ),
              ),
...
