...
  final Campus selected;
  final ValueChanged<Campus> onChanged;

  @override
  Widget build(BuildContext context) {
    return SegmentedButton<Campus>(
      key: const Key("campus_toggle"),
      segments: const <ButtonSegment<Campus>>[
        ButtonSegment<Campus>(
          value: Campus.sgw,
          label: Text('SGW'),
        ),
        ButtonSegment<Campus>(
          value: Campus.loyola,
          label: Text('Loyola'),
        ),
      ],
...
