...
                        )
                      else if (_addedEntries.isNotEmpty) ...[
                        const Divider(height: 16),
                        const Align(
                          alignment: Alignment.centerLeft,
                          child: Text(
                            'My Schedule',
                            style: TextStyle(
                                fontWeight: FontWeight.bold, fontSize: 14),
                          ),
                        ),
                        const SizedBox(height: 4),
                        Flexible(
...
